Remove speed command and related functionality for improved clarity and performance